--- a/responsive.css
+++ b/responsive.css
@@ -60,8 +60,14 @@
         display: none;
     }
 
-    .icon{
+     .icon{
         display: block;
+        line-height: 80px;
+        padding: 0 25px;
+        color: white;
+        display: block;
+        transition: all 0.5s;
+        background-color: rgba(241, 236, 236, 0.5);
     }
 
 }
