--- a/responsive.css
+++ b/responsive.css
@@ -68,6 +68,8 @@
         display: block;
         transition: all 0.5s;
         background-color: rgba(241, 236, 236, 0.5);
+        text-align: center;
+        font-size: 20px;
     }
 
 }
